src/tests/krate/publish/snapshots/all__krate__publish__tarball__json_bytes_truncated.snap
---
source: src/tests/krate/publish/tarball.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid metadata length for remaining payload: 100"
    }
  ]
}
