src/tests/krate/publish/snapshots/all__krate__publish__tarball__new_krate_tarball_with_hard_links.snap
---
source: src/tests/krate/publish/tarball.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "unexpected symlink or hard link found: foo-1.1.0/bar"
    }
  ]
}
