src/tests/krate/publish/snapshots/all__krate__publish__tarball__tarball_bytes_truncated.snap
---
source: src/tests/krate/publish/tarball.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid tarball length for remaining payload: 100"
    }
  ]
}
